# beldex-android-wallet

./: .gitignore  README.md  build.gradle  gradle.properties  y  y.pub
app/: CMakeLists.txt  build.gradle
app/alphaDevnet/release/: output-metadata.json
app/alphaMainnet/release/: output-metadata.json
app/alphaStagenet/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: monerujo.cpp  monerujo.h
app/src/main/res/drawable/: backgound_seed.xml  dot_light.xml  gradient_oval.xml  gradient_street.xml  green_button.xml  ic__5_words_seed.xml  ic_about.xml  ic_add.xml  ic_circle_error.xml  ic_empty_wallet_image.xml  ic_error_red_24dp.xml  ic_error_red_36dp.xml  ic_favorite_24dp.xml  ic_favorite_border_24dp.xml  ic_fingerprint.xml  ic_github.xml  ic_gmail.xml  ic_group.xml  ic_import_wallet.xml  ic_info_green_36dp.xml  ic_language.xml  ic_launcher_foreground.xml  ic_logo.xml  ic_node.xml  ic_onboarding_fingerprint.xml  ic_onboarding_nodes.xml  ic_onboarding_seed.xml  ic_onboarding_welcome.xml  ic_onboarding_xmrto.xml  ic_privacy_policy.xml  ic_privacypolicy.xml  ic_private_key.xml  ic_qr_code_svg.xml  ic_receive_svg.xml  ic_refresh_black_24dp.xml  ic_renew_24dp.xml  ic_send_svg.xml  ic_settings_svg.xml  ic_signal_wifi_1_bar_24dp.xml  ic_signal_wifi_2_bar_24dp.xml  (+15 more)
app/src/main/res/layout/: activity_login.xml  activity_on_boarding.xml  activity_wallet.xml  alert_dialog.xml  checkbox_confirm.xml  fragment_about.xml  fragment_credits.xml  fragment_generate.xml  fragment_help.xml  fragment_login.xml  fragment_node.xml  fragment_receive.xml  (+26 more)
(+121 files in other folders)
